--- a/sass/partials/_layouts.scss
+++ b/sass/partials/_layouts.scss
@@ -26,7 +26,14 @@ a {
     height: 4em;
     background-color: $theme_white; 
     text-align: center;
-    margin-top: -10px; 
+    margin-top: -4.5em;
+    position: fixed;
+    z-index: 2;
+}
+#blank_nav {
+    display: block;
+    height: 3.5em;
+    background-color: inherit; 
 }
 #home_nav_prop {
     text-align: center; 
@@ -52,7 +59,7 @@ a {
 /*===========  Search bar positioning | Start  ============ */
 #searchBar {
     border: 1px solid $theme_grey;
-    height: 22.5px;
+    height: 22px;
     background-color: $theme_white;
 }
 .fa-search {
@@ -60,8 +67,9 @@ a {
     padding: 1px 0px;
 }
 .search_position {
-    margin-top: 5px;
-    margin-right: 14%;
+    margin-top: 22px;
+    margin-right: -20%;
+    // width: 100%;
 }
 /*===========  Search bar positioning | End  ============ */
 
